# pomidor-c

./: .gitignore  CMakeLists.txt  README.md  README.txt  README_FIX.txt  README_PATCH.txt  README_SETUP.txt
.github/workflows/: release.yml
examples/: advanced_en.pom  advanced_ru.pom  hello_en.pom  hello_ru.pom  simple_en.pom  simple_ru.pom
scripts/: build-release.ps1  build-release.sh  install.ps1  install.sh  publish-release.ps1  release.ps1  release.sh
src/: main.c
